Add-Migration InitialCreate

--- a/WebApplication.Admin/appsettings.json
+++ b/WebApplication.Admin/appsettings.json
@@ -4,5 +4,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-9UUIP05;Initial Catalog=WebApplication;Persist Security Info=True;User ID=sa; Password=95; MultipleActiveResultSets=True"
   }
 }
