Add Packages To Solution

--- a/WebApplication.Admin/WebApplication.Admin.csproj
+++ b/WebApplication.Admin/WebApplication.Admin.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Alamut.Data" Version="3.0.3" />
+    <PackageReference Include="Alamut.Utilities" Version="3.0.3" />
+    <PackageReference Include="Alamut.Utilities.AspNet" Version="3.0.3" />
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.1" />
