--- a/WebApplication.Admin/WebApplication.Admin.csproj
+++ b/WebApplication.Admin/WebApplication.Admin.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\WebApplication.Data\WebApplication.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Users\" />
+  </ItemGroup>
+
 </Project>
